# tree-sitter-doctext

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-doctext.pc.in
bindings/c/tree_sitter/: tree-sitter-doctext.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_doctext/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDocText/: doctext.h
bindings/swift/TreeSitterDocTextTests/: TreeSitterDocTextTests.swift
examples/: comment.dtxt
queries/: highlights.scm  nvim.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: main.txt
