[package]
name = "tree-sitter-comment"
description = "Tree-sitter parser for writing documentation in plaintext(usually as comments in code)"
version = "2.0.1"
authors = ["MD. Mouinul Hossain <mdmouinulhossainshawon@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "comment"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/oxy2dev/tree-sitter-comment"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
